[package]
name = "simple-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
hex = "0.4.3"
serde_derive = "1.0"
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
num-bigint = { version = "0.4.4", features =  ["serde"] }
num-traits = "0.2.14"
axum = "0.7"
tokio = { version = "1.0", features = ["full"]}
axum-macros = {version =  "0.4" }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.2.0", features = ["add-extension", "auth", "compression-full", "trace"] }
tokio-tungstenite = "0.21.0"
futures = "0.3.0"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
